feat: 앨범 목록 조회 API에 구독 상태 필터링 기능 추가 (#219)
* feat: 앨범 목록 조회 시 구독 상태 필터링 기능 추가

* fix: 구독 상태 ACTIVE 필터링 적용 시 BASIC 앨범도 함께 조회되도록 수정

* test: 구독 상태 필터링 단위 테스트 추가

* test: 구독 상태 필터링 통합 테스트 추가

* test: 앨범 목록 조회 응답 검증 로직을 tuple 기반 extracting 방식으로 개선